--- a/app/assets/stylesheets/components/_nu-media.scss
+++ b/app/assets/stylesheets/components/_nu-media.scss
@@ -57,5 +57,5 @@
 
 
 figure{
-  margin: 0;
+  // margin: 0;
 }
